--- a/resonite_communities/clients/web/templates/admin/events.html
+++ b/resonite_communities/clients/web/templates/admin/events.html
@@ -167,7 +167,7 @@
                 dropdown.classList.remove('is-active');
 
                 try {
-                    const response = await fetch('http://resonite-communities.local/v2/admin/events/update_status', {
+                    const response = await fetch('https://resonite-communities.com/v2/admin/events/update_status', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
