--- a/resonite_communities/clients/web/templates/index.html
+++ b/resonite_communities/clients/web/templates/index.html
@@ -252,7 +252,7 @@
 
           <div id="About" class="content-tab" style="display:{{tab|tab_display('About')}}">
             <div class="content">
-              <p>This service is provided to you by GrayBoltWolf and Brodokk. If you have any question about it, you can contact them either on discord or Resonite.</p>
+              <p>This service is provided to you by GrayBoltWolf and <a href="https://brodokk.space">Brodokk</a>. If you have any question about it, you can contact them either on discord or Resonite.</p>
 
               <br>
 
