--- a/resonite_communities/clients/web/templates/base.html
+++ b/resonite_communities/clients/web/templates/base.html
@@ -20,6 +20,10 @@
     {% block extended_head %}{% endblock %}
 
     <style>
+      .no-scroll {
+        overflow: hidden;
+        }
+
         .hero.is-small .hero-body {
             padding: 0em 1.5rem;
         }
