--- a/resonite_communities/clients/web/templates/admin/events.html
+++ b/resonite_communities/clients/web/templates/admin/events.html
@@ -1,5 +1,7 @@
 {% extends "admin/base.html" %}
 {% block extended_head %}
+<script src="/static/js/notification.js"></script>
+<script src="/static/js/events.js"></script>
 <style>
     .fixed-width {
         display: inline-block;
@@ -88,133 +90,5 @@
 <div id="notifications">
 
 </div>
-
-<script>
-    // Event status dropdown control
-    document.addEventListener('DOMContentLoaded', () => {
-        const dropdownTriggers = document.querySelectorAll('.dropdown-trigger')
-
-        dropdownTriggers.forEach(trigger => {
-            const dropdown = trigger.closest('.dropdown');
-
-            // Toggle dropdown
-            trigger.addEventListener('click', () => {
-                dropdown.classList.toggle('is-active');
-            });
-        });
-
-        // Exit dropdown
-        document.addEventListener('click', (event) => {
-            const dropdowns = document.querySelectorAll('.dropdown');
-            dropdowns.forEach(dropdown => {
-                if (!dropdown.contains(event.target)) {
-                    dropdown.classList.remove('is-active');
-                }
-            });
-        });
-    })
-</script>
-
-<script>
-    // Handle event status change
-
-    function createNotification(message, type = 'is-info', result_detail = []) {
-        const notificationsContainer = document.getElementById('notifications');
-
-        const notification = document.createElement('div');
-        notification.className = `notification ${type}`;
-
-        const deleteButton = document.createElement('button')
-        deleteButton.className = 'delete';
-        deleteButton.addEventListener('click', () => {
-            notification.remove();
-        });
-
-        notification.appendChild(deleteButton);
-
-        notification.appendChild(document.createTextNode(message));
-
-        if (result_detail && Array.isArray(result_detail)) {
-            const errorList = document.createElement('ul');
-
-            result_detail.forEach(error => {
-                console.log(error)
-                const listItem = document.createElement('li');
-                listItem.textContent = error;
-                errorList.appendChild(listItem);
-            });
-            notification.appendChild(errorList);
-        }
-
-        notificationsContainer.appendChild(notification);
-
-        setTimeout(() => {
-            notification.remove();
-        }, 5000);
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-        (document.querySelectorAll('.dropdown-item[data-status]') || []).forEach(($item) => {
-            $item.addEventListener('click', async () => {
-                const status = $item.dataset.status;
-                const event_id =$item.dataset.event_id;
-
-                console.log('Status selected: ', status);
-                console.log('For event: ', event_id);
-
-                const dropdown = $item.closest('.dropdown');
-
-                dropdown.classList.remove('is-active');
-
-                try {
-                    const response = await fetch('/v2/admin/events/update_status', {
-                        method: 'POST',
-                        headers: {
-                            'Content-Type': 'application/json'
-                        },
-                        body: JSON.stringify({
-                            id: event_id,
-                            status: status,
-                        })
-                    });
-
-                    if (response.ok) {
-                        const result = await response.json();
-                        console.log('Status updated successfully', result);
-                        createNotification('Status update successfully', 'is-success');
-                        const statusSpan = dropdown.querySelector('.dropdown-trigger span')
-
-                        if (['CANCELED', 'ACTIVE', 'PENDING', 'READY', 'COMPLETED'].includes(result.status)) {
-                            statusSpan.textContent = result.status;
-                        } else {
-                            console.log('Invalid status received:', result.status);
-                            createNotification(`Failed to update status: Invalid status '${result.status || 'None'}'`, 'is-danger');
-                        }
-                    } else {
-                        const result = await response.json();
-                        console.log('Failed to update status:', result);
-
-                        if (result.detail && Array.isArray(result.detail)) {
-                            const errorMessages = result.detail.map(error => {
-                                if (typeof error === 'string') {
-                                    return error;
-                                } else if (error.msg) {
-                                    return error.msg;
-                                } else {
-                                    return JSON.stringify(error);
-                                }
-                            });
-                            createNotification(`Failed to update status:`, 'is-danger', errorMessages);
-                        } else {
-                            createNotification(`Failed to update status: ${result.detail || 'Unknown error'}`, 'is-danger');
-                        }
-                    }
-                } catch (error) {
-                    createNotification('An unexpected error occurred. Please try again later.', 'is-danger');
-                }
-            });
-        });
-    });
-</script>
 
 {% endblock content %}
