switch copy facet button to alpinejs

--- a/resonite_communities/clients/web/templates/base.html
+++ b/resonite_communities/clients/web/templates/base.html
@@ -19,6 +19,7 @@
     <script src="https://kit.fontawesome.com/7dc3015a44.js" crossorigin="anonymous"></script>
     <script defer src="/static/js/alpine_tabs.js"></script>
     <script defer src="/static/js/alpine_info_toggle.js"></script>
+    <script defer src="/static/js/alpine_copy_facet_url.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     {% block extended_head %}{% endblock %}
 
@@ -328,61 +329,6 @@
 
 <script>
 
-  // Manage facet resdb url copy button
-  //js-copy-facet-url
-  document.querySelector('.js-copy-facet-url').style.display = 'block'
-  document.querySelector('.nojs-copy-facet-url').style.display = 'none'
-
-  function CopyFacetResoniteDBUrlToClipboard(text) {
-    var textArea = document.createElement("textarea");
-
-    textArea.style.position = 'fixed';
-    textArea.style.top = 0;
-    textArea.style.left = 0;
-    textArea.style.width = '2em';
-    textArea.style.height = '2em';
-    textArea.style.padding = 0;
-    textArea.style.border = 'none';
-    textArea.style.outline = 'none';
-    textArea.style.boxShadow = 'none';
-    textArea.style.background = 'transparent';
-
-    textArea.value = text;
-
-    document.body.appendChild(textArea);
-    textArea.focus();
-    textArea.select();
-
-    function resetCopyBtn(oldStatus) {
-      CopyFacetResoniteDBUrl.classList.remove(oldStatus);
-      CopyFacetResoniteDBUrl.classList.add('is-dark');
-      CopyFacetResoniteDBUrl.querySelector('span').innerHTML = 'Save facet resonitedb url'
-    }
-
-    function setStatusCopyBtn(msg, status) {
-      var CopyFacetResoniteDBUrl = document.querySelector('.js-copy-facet-url');
-      CopyFacetResoniteDBUrl.querySelector('span').innerHTML = msg;
-      CopyFacetResoniteDBUrl.classList.remove('is-dark');
-      CopyFacetResoniteDBUrl.classList.add(status);
-      setTimeout(function () {resetCopyBtn(status)}, 3000);
-    }
-
-    try {
-      var successful = document.execCommand('copy');
-      var msg = successful ? 'successful' : 'unsuccessful';;
-      setStatusCopyBtn('Successfuly copied resonitedb url', 'is-success');
-    } catch (err) {
-      setStatusCopyBtn('Error copy resonitedb url', 'is-danger');
-    }
-
-    document.body.removeChild(textArea);
-  }
-
-  var CopyFacetResoniteDBUrl = document.querySelector('.js-copy-facet-url');
-
-  CopyFacetResoniteDBUrl.addEventListener('click', function(event) {
-    CopyFacetResoniteDBUrlToClipboard('{{ facet_url }}');
-  });
 
   // Handle date to user timezone for events
 
