--- a/resonite_communities/clients/web/templates/index.html
+++ b/resonite_communities/clients/web/templates/index.html
@@ -20,8 +20,8 @@
                 </article>
               </div>
 
-              <div class="column">
-                <button class="button is-large is-fullwidth is-dark js-copy-facet-url" style="display:none">
+              <div class="column" x-data="copyFacetUrl()">
+                <button class="button is-large is-fullwidth is-dark js-copy-facet-url" @click="copyToClipboard('{{ facet_url }}')">
                   <span>Copy facet resonitedb url</span>
                     <span class="icon is-small">
                     <i class="fas fa-solid fa-clipboard"></i>
