move more stuff into javascript script

--- a/resonite_communities/clients/web/templates/base.html
+++ b/resonite_communities/clients/web/templates/base.html
@@ -17,9 +17,10 @@
     <link rel='stylesheet' href="../css/prism.css">
     <link rel="stylesheet" href="../css/cheatsheet.css">
     <script src="https://kit.fontawesome.com/7dc3015a44.js" crossorigin="anonymous"></script>
-    <script defer src="/static/js/alpine_tabs.js"></script>
-    <script defer src="/static/js/alpine_info_toggle.js"></script>
-    <script defer src="/static/js/alpine_copy_facet_url.js"></script>
+    <script src="/static/js/date_formatter.js"></script>
+    <script defer src="/static/js/alpine/tabs.js"></script>
+    <script defer src="/static/js/alpine/info_toggle.js"></script>
+    <script defer src="/static/js/alpine/copy_facet_url.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     {% block extended_head %}{% endblock %}
 
@@ -329,36 +330,6 @@
 
 <script>
 
-
-  // Handle date to user timezone for events
-
-  const timezone = Intl.DateTimeFormat().resolvedOptions().timeZone;
-
-  const dates_tip = document.querySelectorAll(".date i");
-
-  dates_tip.forEach((date_tip) => {
-    date_tip.title = 'Dates are in ' + timezone + ' timezone';
-  });
-
-  const dates_start = document.querySelectorAll(".date .start");
-
-  dates_start.forEach((date_start) => {
-    parsed_date = new Date(Date.parse(date_start.innerHTML + " " + new Date().getFullYear() + " UTC"));
-    date_start.innerText = parsed_date.toLocaleDateString(
-      'en-us', {
-        weekday:"short", year:"numeric", month:"short", day:"numeric", hour: "numeric", minute: "numeric"
-      });
-  });
-
-  const dates_end = document.querySelectorAll(".date .end");
-
-  dates_end.forEach((date_end) => {
-    parsed_date = new Date(Date.parse(date_end.innerHTML + " " + new Date().getFullYear() + " UTC"));
-    date_end.innerText = parsed_date.toLocaleDateString(
-      'en-us', {
-        weekday:"short", year:"numeric", month:"short", day:"numeric", hour: "numeric", minute: "numeric"
-      });
-  });
 
 </script>
 </body>
